--- a/daonuocmang.html
+++ b/daonuocmang.html
@@ -8,8 +8,11 @@
 
 <script>
 let array = [2, 3, 4, 11, 5, 12, 6, 8, 1, 9];
-let reversedArray = array.reverse(); // Create the reversed array directly
-console.log(reversedArray);
+let reverseArray = []
+for(let i = array.length - 1; i >= 0; i--){
+    reverseArray.push(array[i])
+}
+console.log(reverseArray)
 </script>
 </body>
 </html>
